--- a/glotrix/tsconfig.json
+++ b/glotrix/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "extends": "./node_modules/gts/tsconfig-google.json",
   "compileOnSave": false,
   "compilerOptions": {
     "baseUrl": "./",
@@ -11,26 +12,13 @@
     "moduleResolution": "node",
     "importHelpers": true,
     "target": "es2015",
-    "typeRoots": [
-      "node_modules/@types"
-    ],
-    "lib": [
-      "es2018",
-      "dom"
-    ],
+    "typeRoots": ["node_modules/@types"],
+    "lib": ["es2018", "dom"],
     "paths": {
-      "core": [
-        "dist/core"
-      ],
-      "core/*": [
-        "dist/core/*"
-      ],
-      "@lib/core": [
-        "dist/lib/core"
-      ],
-      "@lib/core/*": [
-        "dist/lib/core/*"
-      ]
+      "core": ["dist/core"],
+      "core/*": ["dist/core/*"],
+      "@lib/core": ["dist/lib/core"],
+      "@lib/core/*": ["dist/lib/core/*"]
     }
   },
   "angularCompilerOptions": {
