--- a/glotrix/apps/cms-e2e/tsconfig.json
+++ b/glotrix/apps/cms-e2e/tsconfig.json
@@ -1,7 +1,9 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "types": ["cypress", "node"]
-  },
-  "include": ["**/*.ts"]
+    "outDir": "../../out-tsc/e2e",
+    "module": "commonjs",
+    "target": "es5",
+    "types": ["jasmine", "jasminewd2", "node"]
+  }
 }
