--- a/glotrix/apps/store/tsconfig.app.json
+++ b/glotrix/apps/store/tsconfig.app.json
@@ -5,5 +5,5 @@
     "types": []
   },
   "include": ["**/*.ts"],
-  "exclude": ["src/test-setup.ts", "**/*.spec.ts"]
+  "exclude": ["src/test.ts", "**/*.spec.ts"]
 }
