--- a/glotrix/package.json
+++ b/glotrix/package.json
@@ -29,6 +29,7 @@
   },
   "private": true,
   "dependencies": {
+    "@nrwl/angular": "^8.4.12",
     "@angular/animations": "^8.0.0",
     "@angular/common": "^8.0.0",
     "@angular/compiler": "^8.0.0",
@@ -43,25 +44,27 @@
   },
   "devDependencies": {
     "@angular/cli": "8.1.1",
-    "@nrwl/angular": "^8.4.12",
     "@nrwl/workspace": "8.4.12",
     "@types/node": "~8.9.4",
     "dotenv": "6.2.0",
-    "eslint": "6.1.0",
-    "prettier": "1.16.4",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
+    "eslint": "6.1.0",
     "typescript": "~3.4.5",
+    "prettier": "1.16.4",
     "@angular/compiler-cli": "^8.0.0",
     "@angular/language-service": "^8.0.0",
     "@angular-devkit/build-angular": "^0.800.1",
     "codelyzer": "~5.0.1",
-    "jest-preset-angular": "7.0.0",
-    "@nrwl/jest": "8.4.12",
-    "jest": "24.1.0",
-    "@types/jest": "24.0.9",
-    "ts-jest": "24.0.0",
-    "cypress": "3.4.1",
-    "@nrwl/cypress": "8.4.12"
+    "karma": "~4.0.0",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-jasmine": "~1.1.2",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "jasmine-core": "~2.99.1",
+    "jasmine-spec-reporter": "~4.2.1",
+    "@types/jasmine": "~2.8.8",
+    "protractor": "~5.4.0",
+    "@types/jasminewd2": "~2.0.3"
   }
 }
