--- a/glotrix/tsconfig.json
+++ b/glotrix/tsconfig.json
@@ -15,7 +15,9 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@glotrix/glotrix-ui": ["libs/glotrix-ui/src/index.ts"]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
