--- a/newworkspace/glotrix/package.json
+++ b/newworkspace/glotrix/package.json
@@ -29,7 +29,6 @@
   },
   "private": true,
   "dependencies": {
-    "@nrwl/angular": "8.4.12",
     "@angular/animations": "^8.0.0",
     "@angular/common": "^8.0.0",
     "@angular/compiler": "^8.0.0",
@@ -38,30 +37,33 @@
     "@angular/platform-browser": "^8.0.0",
     "@angular/platform-browser-dynamic": "^8.0.0",
     "@angular/router": "^8.0.0",
+    "@nrwl/angular": "8.4.12",
     "core-js": "^2.5.4",
     "rxjs": "~6.4.0",
     "zone.js": "^0.9.1"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "^0.800.1",
     "@angular/cli": "8.1.1",
-    "@nrwl/workspace": "8.4.12",
-    "@types/node": "~8.9.4",
-    "dotenv": "6.2.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
-    "eslint": "6.1.0",
-    "typescript": "~3.4.5",
-    "prettier": "1.16.4",
     "@angular/compiler-cli": "^8.0.0",
     "@angular/language-service": "^8.0.0",
-    "@angular-devkit/build-angular": "^0.800.1",
-    "codelyzer": "~5.0.1",
-    "jest-preset-angular": "7.0.0",
+    "@nrwl/cypress": "8.4.12",
     "@nrwl/jest": "8.4.12",
-    "jest": "24.1.0",
+    "@nrwl/workspace": "8.4.12",
     "@types/jest": "24.0.9",
-    "ts-jest": "24.0.0",
+    "@types/node": "~8.9.4",
+    "bootstrap": "^4.3.1",
+    "codelyzer": "~5.0.1",
     "cypress": "3.4.1",
-    "@nrwl/cypress": "8.4.12"
+    "dotenv": "6.2.0",
+    "eslint": "6.1.0",
+    "jest": "24.1.0",
+    "jest-preset-angular": "7.0.0",
+    "prettier": "1.16.4",
+    "sass-loader": "^7.3.1",
+    "ts-jest": "24.0.0",
+    "ts-node": "~7.0.0",
+    "tslint": "~5.11.0",
+    "typescript": "~3.4.5"
   }
 }
