--- a/newworkspace/glotrix/tsconfig.json
+++ b/newworkspace/glotrix/tsconfig.json
@@ -17,7 +17,7 @@
     "baseUrl": ".",
     "paths": {
       "@glotrix/core": ["libs/core/src/index.ts"],
-      "@glotrix/ui": ["libs/ui/src/index.ts"]
+      "@glotrix/ui/layout": ["libs/ui/layout/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
