adding top-bar  navigation component

--- a/newworkspace/glotrix/nx.json
+++ b/newworkspace/glotrix/nx.json
@@ -25,6 +25,12 @@
     },
     "ui-layout": {
       "tags": []
+    },
+    "ui-components-navigation": {
+      "tags": []
+    },
+    "ui-components-ungrouped": {
+      "tags": []
     }
   }
 }
