--- a/newworkspace/glotrix/package.json
+++ b/newworkspace/glotrix/package.json
@@ -37,6 +37,7 @@
     "@angular/platform-browser": "^8.0.0",
     "@angular/platform-browser-dynamic": "^8.0.0",
     "@angular/router": "^8.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.0",
     "@nrwl/angular": "8.4.12",
     "core-js": "^2.5.4",
     "rxjs": "~6.4.0",
