--- a/newworkspace/glotrix/angular.json
+++ b/newworkspace/glotrix/angular.json
@@ -24,7 +24,8 @@
             "assets": ["apps/cms/src/favicon.ico", "apps/cms/src/assets"],
             "styles": [
               "apps/cms/src/styles.scss",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css"
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/font-awesome/css/font-awesome.css"
             ],
             "scripts": []
           },
@@ -142,7 +143,8 @@
             "assets": ["apps/store/src/favicon.ico", "apps/store/src/assets"],
             "styles": [
               "apps/store/src/styles.scss",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css"
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/font-awesome/css/font-awesome.css"
             ],
             "scripts": []
           },
