--- a/newworkspace/glotrix/package.json
+++ b/newworkspace/glotrix/package.json
@@ -39,7 +39,9 @@
     "@angular/router": "^8.0.0",
     "@ng-bootstrap/ng-bootstrap": "^5.1.0",
     "@nrwl/angular": "8.4.12",
+    "angular-font-awesome": "^3.1.2",
     "core-js": "^2.5.4",
+    "font-awesome": "^4.7.0",
     "rxjs": "~6.4.0",
     "zone.js": "^0.9.1"
   },
